# suker_rust_project

./: .gitignore  README  README.md
fastS/release/: fasts_0.1.0_x64_en-US.msi
fastS/src/: common.js  index.html  main.js  styles.css
fastS/src-tauri/: Cargo.toml  tauri.conf.json
fastS/src-tauri/src/: lib.rs  main.rs  search.rs
linkedList/LinkedList_1_Box/: Cargo.toml
linkedList/LinkedList_1_Box/src/: main.rs
linkedList/LinkedList_2_Rc_Refcell/: Cargo.toml
linkedList/LinkedList_2_Rc_Refcell/src/: main.rs
logReportServer/: Cargo.toml
logReportServer/report/: log.txt
logReportServer/src/: main.rs
servo_libs_simulator/: Cargo.toml  README.md
servo_libs_simulator/examples/: basic.rs  egui_demo.rs  egui_demo_robotarms_2d.rs  egui_demo_robotarms_3d.rs  egui_demo_smooth.rs
servo_libs_simulator/src/: lib.rs
tetris_sdl2/: Cargo.toml  README.md  build.rs  test.c
tetris_sdl2/src/: audio.__rs  audio.rs  audio_rodio.rs  audio_sdl2.rs  audiocvt.rs  blocks.rs  main.rs  tetris.rs
