[package]
name = "servo-libs-simulator"
version = "0.1.3"
edition = "2024"
description = "Servo motor simulation crate with channel management"
license = "MIT"
repository = "https://github.com/kchhero/suker_rust_project/tree/master/servo-libs-simulator"
readme = "README.md"
categories = ["simulation", "embedded", "hardware-support", "science::robotics"]
keywords = ["servo", "pwm", "robotics", "simulation", "motor"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui = "0.32.3"
eframe = "0.32.3"
